# ecstasy

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
scripts/: analyze_permutations.py  generate_permutations.py  profiler.py
scripts/install/: boltz.sh  colabfold.sh  ecstasy.sh  ecstasy.yaml  esmfold.sh  esmfold.yaml  esmfold_py39_wip.sh  esmfold_py39_wip.yaml
scripts/permutation_invariance/: analyze_permutations.py  generate_permutations.py
scripts/profiling/: basic_profiler.py
src/ecstasy/: __init__.py  predict.py  utils.py
src/ecstasy/permutation_invariance/: analyze_permutations.py  generate_permutations.py
src/ecstasy/profiling/: inference_profiler.py
src/permutation_invariance/: analyze_permutations.py
src/profiling/: basic_profiler.py
tests/: test_utils.py
