[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecstasy"
version = "0.1.0"
description = "A comprehensive protein structure prediction and analysis toolkit"
authors = [
    {name = "Harsh Agrawal", email = "harshagrawal.1312@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

dependencies = [
    "biopython",
    "biotite",
    "numpy",
    "pandas",
    "psutil",
    "requests",
    "seaborn",
    "tmtools",
    "jupyter",
    "pytest",
    "black",
    "DockQ",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ecstasy" = ["*.json", "*.yaml", "*.yml", "*.toml", "*.txt", "*.md"] 